Fix first list of item spacings see #19

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -263,7 +263,6 @@ table {
 \*------------------------------------*/
 
 ol {
-	margin-top: $_u;
 	margin-bottom: $_u;
 
 	ul &, ol &, dl & {
