--- a/editor-style.css
+++ b/editor-style.css
@@ -3800,7 +3800,6 @@ blockquote {
                LISTS
 \*------------------------------------*/
 ol {
-  margin-top: 24px;
   margin-bottom: 24px; }
   ul ol, ol ol, dl ol {
     margin-left: 36px;
